--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
   <groupId>jcommon</groupId>
   <artifactId>jcommon-jrouter</artifactId>
-  <version>1.0-v20140912</version>
-  <packaging>war</packaging>
+  <version>1.0-v20160923</version>
+  <packaging>jar</packaging>
 
   <name>jrouter Maven Sipapp</name>
 
@@ -23,8 +23,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
@@ -37,10 +37,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>sip-api</artifactId>
-      <scope>provided</scope>
-      <version>1.1</version>
+        <groupId>jcommon</groupId>
+        <artifactId>jcommon-jutils</artifactId>
+        <version>1.0-v20150917</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -52,6 +51,7 @@
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-websocket</artifactId>
       <version>${jetty.version}</version>
+      <scope>provided</scope>
     </dependency>
      <dependency>
       <groupId>org.cipango</groupId>
